--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
     "peer": "^1.0.2",
     "peerjs": "^1.5.4",
