--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
+    "firebase": "^11.6.0",
     "peer": "^1.0.2",
     "peerjs": "^1.5.4",
     "react": "^19.1.0",
